--- a/SchoolDoor-Backend/env.example
+++ b/SchoolDoor-Backend/env.example
@@ -1,12 +1,14 @@
-# Database Configuration
-# Database Configuration
-DATABASE_URL=postgresql://user:password@host:port/dbname
+# SchoolDoor Backend Environment Configuration
+# Copy this file to .env and fill in your values
 
-# AI API Configuration
-PERPLEXITY_API_KEY=your_perplexity_api_key_here
+# Database Configuration
+DATABASE_URL=sqlite:///./schooldoor.db
 
-# Application Configuration
-SECRET_KEY=your_secret_key_here
+# AI API Configuration (Optional)
+PERPLEXITY_API_KEY=
+
+# Security (IMPORTANT: Change these in production!)
+SECRET_KEY=your-secret-key-change-in-production
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
@@ -15,9 +17,14 @@ HOST=0.0.0.0
 PORT=6001
 DEBUG=True
 
+# CORS Configuration (comma-separated origins, or leave blank)
+CORS_ORIGINS=http://localhost:3000
+
 # Application Focus
 COUNTRY=India
-EDUCATION_SYSTEM=Indian
+EDUCATION_SYSTEM=
 
-# Secrets
-PARTICIPANT_PASSWORD=your_participant_password_here
+# Authentication Secrets (IMPORTANT: Change these!)
+PARTICIPANT_PASSWORD=change-me-participant
+ADMIN_PASSWORD=change-me-admin
+ADMIN_EMAIL=admin@example.com
