--- a/SchoolDoor-Backend/env.example
+++ b/SchoolDoor-Backend/env.example
@@ -1,8 +1,8 @@
 # SchoolDoor Backend Environment Configuration
 # Copy this file to .env and fill in your values
 
-# Database Configuration
-DATABASE_URL=sqlite:///./schooldoor.db
+# Database Configuration (Supabase PostgreSQL)
+DATABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-REF].supabase.co:5432/postgres
 
 # AI API Configuration (Optional)
 PERPLEXITY_API_KEY=
